@@ -4,3 +4,4 @@ Gurkan Sengun                   wrote the original man-page
 Ulf Gustafsson			contributed an NT boot record
 Chris Bshaw			tested NT boot record
 Ronan Salmon			debugged NT BR and contributed missing part
+Mike Jones                      added DOS FAT16 support
