@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH MS-SYS 1 "April 15, 2003"
+.TH MS-SYS 1 "September 13, 2003"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -36,6 +36,9 @@ Write a FAT32 partition NT boot record to device.
 .TP
 .B \-3, \-\-fat32
 Write a FAT32 partition DOS (Win9x) boot record to device.
+.TP
+.B \-6, \-\-fat16
+Write a FAT16 partition DOS (Win9x) boot record to device.
 .TP
 .B \-m, \-\-mbr
 Write a master boot record to device.
